# conveyor-eye

./: .gitignore  ARCHITECTURE.md  COLLABORATION.md  PROGRESS.md  PROJECT_LOG.md  README.md  SESSION_CONTEXT.md  pyproject.toml
configs/: augmentation.yaml  thresholds.generated.yaml  thresholds.yaml
conveyoreye/: __init__.py
conveyoreye/active_learning/: __init__.py  queue.py  sampler.py
conveyoreye/data/: __init__.py  dataset.py  preprocessing.py  simulator.py
conveyoreye/eval/: __init__.py  failure_taxonomy.py  metrics.py  threshold.py
conveyoreye/model/: __init__.py  calibration.py  detector.py
conveyoreye/monitoring/: __init__.py  drift.py  logger.py
conveyoreye/serving/: __init__.py  api.py  schema.py
data/: finetune.yaml
scripts/: __init__.py  convert_mvtec_labels.py  eval_mvtec.py  evaluate.py  finetune.py  prep_real_good.py  run_api.py  simulate_data.py  train.py
