[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conveyoreye"
version = "0.1.0"
description = "Industrial defect detection on a simulated conveyor belt (YOLOv8) — a learning-oriented detection/monitoring/active-learning stack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rayden Khuraijam" }]

# NOTE: versions are pinned loosely on purpose. This is a learning project; the
# interfaces are built to survive a major-version bump of ultralytics/fastapi.
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "PyYAML>=6.0",
    "albumentations>=2.0",
    "ultralytics>=8.1",
    "torch>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",         # isotonic + Platt (LogisticRegression) calibration
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",               # FastAPI TestClient
]
# v2: faiss for coreset selection at N>50k (see active_learning/sampler.py)
fast = ["faiss-cpu>=1.8"]

[project.scripts]
conveyoreye-simulate = "scripts.simulate_data:main"
conveyoreye-train = "scripts.train:main"
conveyoreye-evaluate = "scripts.evaluate:main"
conveyoreye-api = "scripts.run_api:main"

[tool.setuptools.packages.find]
include = ["conveyoreye*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines tolerated in docstrings / rationale comments

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true   # ultralytics/albumentations ship partial stubs

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
